Slightly reordered game pages for mobile (alternating screenshots and text now). Hover image for listed_games no longer applies on mobile so it doesn't flash white when you tap a game.

--- a/styles/main.css
+++ b/styles/main.css
@@ -173,6 +173,7 @@ p.about_details {
 .soundcloud-embed {
 	width: 100%;
 	height: 17em;
+	padding-top: 8px;
 }
 
 
